<project xmlns="http://maven.apache.org/POM/4.0.0" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
     http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.ac.open.webmaths</groupId>
  <artifactId>webmaths</artifactId>
  <version>4.0.0</version>
  <packaging>war</packaging>
  <name>Open University webmaths</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <timestamp>${maven.build.timestamp}</timestamp>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
    <ou-mathjax-location></ou-mathjax-location>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <scope>provided</scope>
      <version>4.0.1</version>
    </dependency>
	<dependency>
	  <groupId>org.junit.jupiter</groupId>
	  <artifactId>junit-jupiter-engine</artifactId>
	  <version>6.1.3</version>
	  <scope>test</scope>
	</dependency>
	<dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>6.0.3</version>
      <scope>test</scope>
	</dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.22.1</version>
    </dependency>
    <dependency>
      <groupId>javax.xml.ws</groupId>
      <artifactId>jaxws-api</artifactId>
      <version>2.3.0</version>
    </dependency>
    <dependency>
      <groupId>javax.jws</groupId>
      <artifactId>javax.jws-api</artifactId>
      <version>1.1</version>
    </dependency>
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>
    <dependency>
    <groupId>com.sun.xml.ws</groupId>
      <artifactId>jaxws-rt</artifactId>
      <!-- Note 2.3.x is the last version to support Tomcat 9 (java.* rather than jakarta.* packages) -->
      <version>2.3.7</version>
	</dependency>
	<dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>batik-transcoder</artifactId>
      <version>1.19</version>
    </dependency>
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>fop</artifactId>
      <version>2.11</version>
    </dependency>
  </dependencies>
  
  <build>
    <finalName>${project.artifactId}</finalName>
	  <plugins>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-compiler-plugin</artifactId>
	      <version>3.8.1</version>
	      <configuration>
	        <source>1.8</source>
	        <target>1.8</target>
	      </configuration>
	    </plugin>
	    <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-war-plugin</artifactId>
	      <version>3.3.1</version>
	      <configuration>
	        <filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
	      </configuration>
	    </plugin>
	<plugin>
	    <groupId>org.codehaus.mojo</groupId>
	    <artifactId>jaxws-maven-plugin</artifactId>
	    <version>2.6</version>
	    <configuration>
	        <wsdlDirectory>${project.basedir}/src/main/resources/wsdl</wsdlDirectory>
	        <wsdlLocation>/wsdl/maths.mathjax.wsdl</wsdlLocation>
	        <packageName>uk.ac.open.webmaths.mathjax</packageName>
	        <keep>true</keep>
	        <sourceDestDir>${project.build.directory}/generated/src/main/java</sourceDestDir>
	    </configuration>
	    <executions>
	        <execution> 
	            <id>myImport</id>
	            <goals><goal>wsimport</goal></goals>
	        </execution>
	    </executions>
	</plugin>

	  </plugins>
	  <resources>
	  <resource>
	  <directory>src/main/resources</directory>
        <filtering>true</filtering>
	  </resource>
	  </resources>
  </build>
</project>